fix: add overflow to code

--- a/styles/post.module.scss
+++ b/styles/post.module.scss
@@ -73,6 +73,7 @@
         border-radius: 8px;
         padding: 1rem;
         code {
+          overflow-x: auto;
           font-family: monospace;
           font-size: 0.75rem;
           line-height: 1.25;
